--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,7 +1,6 @@
 @mixin header {
     padding-top: 45px;
     font-size: 28px;
-    font-family: "OpenSans";
     color: $secondary-color;
     text-align: center;
     font-weight: 900;
